# docs/swagger.yaml
@@ -142,6 +142,13 @@ definitions:
       supplier_id:
         type: integer
     type: object
+  model.CancelOrderRequest:
+    properties:
+      order_id:
+        type: integer
+    required:
+    - order_id
+    type: object
   model.GetCartResponse:
     properties:
       customer_id:
@@ -210,6 +217,16 @@ definitions:
       id:
         example: 1
         type: integer
+    type: object
+  model.UpdateOrderStatusRequest:
+    properties:
+      new_status_id:
+        type: integer
+      order_id:
+        type: integer
+    required:
+    - new_status_id
+    - order_id
     type: object
 info:
   contact: {}
@@ -423,6 +440,122 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Retrieve orders for a user
+      tags:
+      - orders
+  /api/order/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves an order by its ID.
+      parameters:
+      - description: Order ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Order details
+          schema:
+            $ref: '#/definitions/diploma_modules_order_handler_model.Order'
+        "400":
+          description: Invalid order ID
+          schema:
+            $ref: '#/definitions/diploma_modules_order_handler_model.ErrorResponse'
+        "401":
+          description: 'Unauthorized: invalid or missing JWT token'
+          schema:
+            $ref: '#/definitions/diploma_modules_order_handler_model.ErrorResponse'
+        "500":
+          description: Internal server error while retrieving order
+          schema:
+            $ref: '#/definitions/diploma_modules_order_handler_model.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Get order by ID
+      tags:
+      - orders
+  /api/order/cancel:
+    post:
+      consumes:
+      - application/json
+      description: Allows a customer to cancel their own order only if it's in Pending
+        status.
+      parameters:
+      - description: Order ID to cancel
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/model.CancelOrderRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: order cancelled
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Invalid input or bad request
+          schema:
+            $ref: '#/definitions/diploma_modules_order_handler_model.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/diploma_modules_order_handler_model.ErrorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/diploma_modules_order_handler_model.ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/diploma_modules_order_handler_model.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Cancel order by customer
+      tags:
+      - orders
+  /api/order/status:
+    post:
+      consumes:
+      - application/json
+      description: Supplier updates the status of their order
+      parameters:
+      - description: Order ID and New Status
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/model.UpdateOrderStatusRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: status updated
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Invalid input
+          schema:
+            $ref: '#/definitions/diploma_modules_order_handler_model.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/diploma_modules_order_handler_model.ErrorResponse'
+        "500":
+          description: Internal error
+          schema:
+            $ref: '#/definitions/diploma_modules_order_handler_model.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Update order status by supplier
       tags:
       - orders
   /api/product/:id:
