# modules/order/handler/handler.go
@@ -1,5 +1,10 @@
 package handler
 
+import (
+	"context"
+	"diploma/modules/order/model"
+)
+
 type OrderHandler struct {
 	service IOrderService
 }
@@ -10,4 +15,7 @@ func NewHandler(service IOrderService) *OrderHandler {
 
 type IOrderService interface {
 	ICreateOrderService
+	GetOrderByID(ctx context.Context, userID int64, role int, orderID int64) (*model.Order, error)
+	UpdateOrderStatusBySupplier(ctx context.Context, supplierID int64, orderID int64, newStatusID int) error
+	CancelOrderByCustomer(ctx context.Context, customerID int64, orderID int64) error
 }
