# modules/order/routes.go
@@ -11,5 +11,8 @@ func RegisterRoutes(router *gin.RouterGroup, h *handler.OrderHandler) {
 	{
 		// orderRoutes.POST("", h.CreateOrder)
 		orderRoutes.GET("", h.GetOrders)
+		orderRoutes.GET("/:id", h.GetOrderByID)
+		orderRoutes.POST("/status", h.UpdateOrderStatus)
+		orderRoutes.POST("/cancel", h.CancelOrder)
 	}
 }
